[project]
name = "boabem"
description = "Python bindings for the Rust crate 'boa', an embeddable JavaScript engine"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT or Apache-2.0"
authors = [{ name = "Dowon", email = "ks2515@naver.com" }]
keywords = ["javascript", "js"]
classifiers = [
  "Programming Language :: JavaScript",
  "Programming Language :: Rust",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/Bing-su/boabem"

[project.optional-dependencies]
test = ["hypothesis[pytest]", "pytest-pretty", "json-five", "deepdiff"]

[dependency-groups]
dev = ["nox"]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/abi3-py39"]
profile = "release"
python-source = "python"

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "FAST",
  "FBT",
  "FURB",
  "I001",
  "ISC",
  "N",
  "PD",
  "PERF",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "RET",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TC",
  "TRY",
  "UP",
  "W",
]
ignore = ["B905", "E501", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["boabem"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
